# cifar

./: .gitignore  custom_nn.py  custom_nn_tests.py  gruppe_26_blatt_02.ipynb  main.py  pyproject.toml
