[project]
name = "cifar-100"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "pytest>=8.3.5",
    "torch>=2.7.0",
    "torcheval>=0.0.7",
    "torchvision>=0.22.0",
    "tqdm>=4.67.1",
]
